test/arrays/errors/error-const-use-as-ref-1.good
error-const-use-as-ref-1.chpl:2: error: A is const by default, but code attempted to modify it.
note: If you intended to modify A, use an explicit 'ref' intent for the argument 'A'.
